--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <p id="second">Account & List</p>
             </div>
         </div>
+        <div></div>
     </header>
 </body>
 </html>
