--- a/index.html
+++ b/index.html
@@ -31,14 +31,23 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
             </div>
-            <div class="nav-signin">
+            <!-- <div class="language">
+                <select class="select-lng">
+                    <option value="">ENG</option>
+                </select>
+            </div> -->
+            <div class="nav-signin border">
                 <p id="first">Hello, Sign in</p>
                 <p id="second">Account & List</p>
             </div>
-        </div>
-
-        <div>
-            JUST WANT TO MAKE A DEMO CHANGE
+            <div class="nav-order border">
+                <p id="first">Returns</p>
+                <p id="second">& Order</p>
+            </div>
+            <div class="nav-cart border">
+                <i class="fa-solid fa-cart-shopping"></i>
+                <p id="second">Cart</p>
+            </div>
         </div>
     </header>
 </body>
