--- a/index.html
+++ b/index.html
@@ -49,6 +49,49 @@
                 <p id="second">Cart</p>
             </div>
         </div>
+        <div class="panel">
+            <div class="panel-menu border">
+                <i class="fa-solid fa-bars"></i>
+                All
+            </div>
+            <div class="panel-option">
+                <a id="panel-border">Today's Deals</a>
+                <a id="panel-border">Registry</a>
+                <a id="panel-border">Prime Video</a>
+                <a id="panel-border">Gift Cards</a> 
+                <a id="panel-border">Customer Service</a>
+                <a id="panel-border">Sell</a>
+            </div>
+        </div>
     </header>
+        <div class="hero-section">
+            <div class="hero-message">
+                <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a href="">Click here to go to amazon.in</a></p>
+            </div>
+        </div>
+        <div class="shop-section">
+            <div class="box">
+                <div class="box-content">
+                    <h2>A</h2>
+                    <div class="box-img" style="background-image: url('img/box1_image.jpg');"></div>
+                    <p>See more</p>
+                </div>  
+            </div>
+             <div class="box">
+                <h2>A</h2>
+                <div class="box-img" style="background-image: url('img/box2_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+             <div class="box">
+                <h2>A</h2>
+                <div class="box-img" style="background-image: url('img/box3_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+             <div class="box">
+                <h2>A</h2>
+                <div class="box-img" style="background-image: url('img/box4_image.jpg');"></div>
+                <p>See more</p>
+            </div>
+        </div>
 </body>
 </html>
